Rearranged some code - Menu separated to its own module - Card definitions and allocation, moved to the cards file
- Expanded the `refresh_screen` routine to now write the VRAM address + tile to the update queue in HIRAM

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -9,5 +9,6 @@ BANK    0   SLOT    "WRAMLO"            "gfx.buffers"
 ; the queue of screen updates goes in HRAM ($FF80+),
 ; for speed and ease of addressing on the GameBoy
 BANK    0   SLOT    "HRAM"              "gfx.tile_queue"
+
 ; this, being a GameBoy, requires variables in RAM
-BANK    0   SLOT    "WRAMLO"            "playfield.cards"
+BANK    0   SLOT    "WRAMLO"            "table"
