Draw something using actual data-structures

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -11,4 +11,4 @@ BANK    0   SLOT    "WRAMLO"            "gfx.buffers"
 BANK    0   SLOT    "HRAM"              "gfx.tile_queue"
 
 ; this, being a GameBoy, requires variables in RAM
-BANK    0   SLOT    "WRAMLO"            "table"
+BANK    0   SLOT    "WRAMLO"             "cards.table"
