--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,14 @@
             },
             "windows": {
                 "command": "${workspaceFolder}\\build.bat"
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
             }
         }
     ]
