--- a/link_gb.ini
+++ b/link_gb.ini
@@ -5,10 +5,10 @@ build/impatience.o
 
 [ramsections]
 ; the two screen buffers
-BANK    0   SLOT    "WRAMLO"            "gfx.buffers"
+BANK    0   SLOT    "WRAMLO"            "tilemap.buffers"
 ; the queue of screen updates goes in HRAM ($FF80+),
 ; for speed and ease of addressing on the GameBoy
-BANK    0   SLOT    "HRAM"              "gfx.tile_queue"
+BANK    0   SLOT    "HRAM"              "tilemap.tile_queue"
 
 ; this, being a GameBoy, requires variables in RAM
 BANK    0   SLOT    "WRAMLO"             "cards.table"
