--- a/link_gb.ini
+++ b/link_gb.ini
@@ -2,6 +2,7 @@
 build/impatience.o
 
 [sections]
+BANK    0   SLOT    "ROMLO"             ORGA $040 OVERWRITE   "gb_vblank"
 
 [ramsections]
 ; the two screen buffers
