Rework interrupts a little

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -2,7 +2,9 @@
 build/impatience.o
 
 [sections]
-BANK    0   SLOT    "ROMLO"             ORGA $040 OVERWRITE   "gb_vblank"
+BANK    0   SLOT    "ROMLO"             ORGA $00    OVERWRITE   "z80_rst_00"
+BANK    0   SLOT    "ROMLO"             ORGA $08    OVERWRITE   "z80_rst_08"
+BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "gb_vblank"
 
 [ramsections]
 ; the two screen buffers
