Fix vblank interrupt handling
We now have `rst` calls for waiting for vblank and turning the screen on & off. These all fit into the 8-bytes they each have in the RST space!

Renamed methods to be distinct from variables.

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -4,6 +4,8 @@ build/impatience.o
 [sections]
 BANK    0   SLOT    "ROMLO"             ORGA $00    OVERWRITE   "z80_rst_00"
 BANK    0   SLOT    "ROMLO"             ORGA $08    OVERWRITE   "z80_rst_08"
+BANK    0   SLOT    "ROMLO"             ORGA $10    OVERWRITE   "z80_rst_10"
+BANK    0   SLOT    "ROMLO"             ORGA $18    OVERWRITE   "z80_rst_18"
 BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "gb_vblank"
 
 [ramsections]
