--- a/link_gb.ini
+++ b/link_gb.ini
@@ -6,7 +6,7 @@ BANK    0   SLOT    "ROMLO"             ORGA $00    OVERWRITE   "z80_rst_00"
 BANK    0   SLOT    "ROMLO"             ORGA $08    OVERWRITE   "z80_rst_08"
 BANK    0   SLOT    "ROMLO"             ORGA $10    OVERWRITE   "z80_rst_10"
 BANK    0   SLOT    "ROMLO"             ORGA $18    OVERWRITE   "z80_rst_18"
-BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "gb_vblank"
+BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "irq_vblank"
 
 [ramsections]
 ; the two screen buffers
@@ -16,4 +16,6 @@ BANK    0   SLOT    "WRAMLO"            "tilemap.buffers"
 BANK    0   SLOT    "HRAM"              "tilemap.tile_queue"
 
 ; this, being a GameBoy, requires variables in RAM
-BANK    0   SLOT    "WRAMLO"             "cards.table"
+BANK    0   SLOT    "WRAMLO"            "joypad"
+BANK    0   SLOT    "WRAMLO"            "cards.table"
+BANK    0   SLOT    "WRAMLO"            "playfield.cursor"
