Change of terminology
Depot instead of tableau, since tableau describes the entire board.

Also separated Piles and the card pool so that when I expand the Pile structure, the build will fail if the list of Piles exceed 256 bytes,

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -17,5 +17,6 @@ BANK    0   SLOT    "HRAM"              "tilemap.tile_queue"
 
 ; this, being a GameBoy, requires variables in RAM
 BANK    0   SLOT    "WRAMLO"            "joypad"
-BANK    0   SLOT    "WRAMLO"            "cards.table"
+BANK    0   SLOT    "WRAMLO"            "cards.tableau"
+BANK    0   SLOT    "WRAMLO"            "cards.storage"
 BANK    0   SLOT    "WRAMLO"            "playfield.cursor"
