--- a/link_gb.ini
+++ b/link_gb.ini
@@ -17,6 +17,6 @@ BANK    0   SLOT    "HRAM"              "tilemap.tile_queue"
 
 ; this, being a GameBoy, requires variables in RAM
 BANK    0   SLOT    "WRAMLO"            "joypad"
+BANK    0   SLOT    "WRAMLO"            "tableau.cursor"
 BANK    0   SLOT    "WRAMLO"            "tableau.layout"
 BANK    0   SLOT    "WRAMLO"            "tableau.storage"
-BANK    0   SLOT    "WRAMLO"            "playfield.cursor"
