--- a/link_gb.ini
+++ b/link_gb.ini
@@ -9,14 +9,12 @@ BANK    0   SLOT    "ROMLO"             ORGA $18    OVERWRITE   "z80_rst_18"
 BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "irq_vblank"
 
 [ramsections]
-; the two screen buffers
-BANK    0   SLOT    "WRAMLO"            "tilemap.buffers"
-; the queue of screen updates goes in HRAM ($FF80+),
-; for speed and ease of addressing on the GameBoy
-BANK    0   SLOT    "HRAM"              "tilemap.tile_queue"
-
 ; this, being a GameBoy, requires variables in RAM
+;
+BANK    0   SLOT    "WRAMLO"            "tilemap.Buffers"
+BANK    0   SLOT    "WRAMLO"            "tilemap.Queue"
+BANK    0   SLOT    "WRAMLO"            "sprites.Attrs"
 BANK    0   SLOT    "WRAMLO"            "joypad"
-BANK    0   SLOT    "WRAMLO"            "tableau.cursor"
-BANK    0   SLOT    "WRAMLO"            "tableau.layout"
-BANK    0   SLOT    "WRAMLO"            "tableau.storage"
+BANK    0   SLOT    "WRAMLO"            "tableau.Cursor"
+BANK    0   SLOT    "WRAMLO"            "tableau.Layout"
+BANK    0   SLOT    "WRAMLO"            "tableau.Storage"
