Optimisation to tile updates
Sprites can be done after tile updates because OAM DMA is allowed to happen outside of vblank, should tile updates overrun.

Changes to the way the buffers are compared to free up registers; the plan here is to unroll the loop by 4 so that only B is needed to count 1024 bytes, and that will free up C for getting rid of `queue_index`

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -11,11 +11,11 @@ BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "irq_vblank"
 [ramsections]
 ; this, being a GameBoy, requires variables in RAM
 ;
-BANK    0   SLOT    "WRAMLO"            "tilemap.Queue"
+BANK    0   SLOT    "WRAMLO"            "Queue"
+BANK    0   SLOT    "WRAMLO"            "Joypad"
 BANK    0   SLOT    "WRAMLO"            "tilemap.Buffers"
 BANK    0   SLOT    "WRAMLO"            "sprites.Attrs"
 BANK    0   SLOT    "WRAMLO"            "sprites.Cursor"
-BANK    0   SLOT    "WRAMLO"            "Joypad"
 BANK    0   SLOT    "WRAMLO"            "tableau.Cursor"
 BANK    0   SLOT    "WRAMLO"            "tableau.Layout"
 BANK    0   SLOT    "WRAMLO"            "tableau.Storage"
