Split out cursor routines
"cursor.wla" makes a return as "tableau.wla" was getting long.

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -15,7 +15,6 @@ BANK    0   SLOT    "WRAMLO"            "Queue"
 BANK    0   SLOT    "WRAMLO"            "Joypad"
 BANK    0   SLOT    "WRAMLO"            "tilemap.Buffers"
 BANK    0   SLOT    "WRAMLO"            "sprites.Attrs"
-BANK    0   SLOT    "WRAMLO"            "sprites.Cursor"
-BANK    0   SLOT    "WRAMLO"            "tableau.Cursor"
 BANK    0   SLOT    "WRAMLO"            "tableau.Layout"
 BANK    0   SLOT    "WRAMLO"            "tableau.Storage"
+BANK    0   SLOT    "WRAMLO"            "cursor.Cursor"
