--- a/link_gb.ini
+++ b/link_gb.ini
@@ -6,6 +6,9 @@ BANK    0   SLOT    "ROMLO"             ORGA $00    OVERWRITE   "z80_rst_00"
 BANK    0   SLOT    "ROMLO"             ORGA $08    OVERWRITE   "z80_rst_08"
 BANK    0   SLOT    "ROMLO"             ORGA $10    OVERWRITE   "z80_rst_10"
 BANK    0   SLOT    "ROMLO"             ORGA $18    OVERWRITE   "z80_rst_18"
+BANK    0   SLOT    "ROMLO"             ORGA $20    OVERWRITE   "piles.z80_rst_20"
+BANK    0   SLOT    "ROMLO"             ORGA $28    OVERWRITE   "piles.z80_rst_28"
+BANK    0   SLOT    "ROMLO"             ORGA $30    OVERWRITE   "piles.z80_rst_30"
 BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "irq_vblank"
 
 [ramsections]
@@ -15,6 +18,17 @@ BANK    0   SLOT    "WRAMLO"            "Queue"
 BANK    0   SLOT    "WRAMLO"            "Joypad"
 BANK    0   SLOT    "WRAMLO"            "tilemap.Buffers"
 BANK    0   SLOT    "WRAMLO"            "sprites.Attrs"
-BANK    0   SLOT    "WRAMLO"            "tableau.Layout"
-BANK    0   SLOT    "WRAMLO"            "tableau.Storage"
 BANK    0   SLOT    "WRAMLO"            "cursor.Cursor"
+
+BANK    0   SLOT    "WRAMLO"            "piles.Storage"
+BANK    0   SLOT    "WRAMHI"            "piles.PileType"
+BANK    0   SLOT    "WRAMHI"            "piles.PileCount"
+BANK    0   SLOT    "WRAMHI"            "piles.PileCapacity"
+BANK    0   SLOT    "WRAMHI"            "piles.PilePoolLo"
+BANK    0   SLOT    "WRAMHI"            "piles.PilePoolHi"
+BANK    0   SLOT    "WRAMHI"            "piles.PileRow"
+BANK    0   SLOT    "WRAMHI"            "piles.PileCol"
+BANK    0   SLOT    "WRAMHI"            "piles.PileLeft"
+BANK    0   SLOT    "WRAMHI"            "piles.PileRight"
+BANK    0   SLOT    "WRAMHI"            "piles.PileUp"
+BANK    0   SLOT    "WRAMHI"            "piles.PileDown"
