Add Klondike validation
Klondike depots are validated against descending, alternating colour, order.

Validation of the deck / hand is still required.

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -2,33 +2,33 @@
 build/impatience.o
 
 [sections]
-BANK    0   SLOT    "ROMLO"             ORGA $00    OVERWRITE   "z80_rst_00"
-BANK    0   SLOT    "ROMLO"             ORGA $08    OVERWRITE   "z80_rst_08"
-BANK    0   SLOT    "ROMLO"             ORGA $10    OVERWRITE   "z80_rst_10"
-BANK    0   SLOT    "ROMLO"             ORGA $18    OVERWRITE   "z80_rst_18"
-BANK    0   SLOT    "ROMLO"             ORGA $20    OVERWRITE   "piles.z80_rst_20"
-BANK    0   SLOT    "ROMLO"             ORGA $28    OVERWRITE   "piles.z80_rst_28"
-BANK    0   SLOT    "ROMLO"             ORGA $30    OVERWRITE   "piles.z80_rst_30"
-BANK    0   SLOT    "ROMLO"             ORGA $40    OVERWRITE   "irq_vblank"
+BANK    0   SLOT    "ROMLO"     ORGA $00    OVERWRITE   "z80_rst_00"
+BANK    0   SLOT    "ROMLO"     ORGA $08    OVERWRITE   "z80_rst_08"
+BANK    0   SLOT    "ROMLO"     ORGA $10    OVERWRITE   "z80_rst_10"
+BANK    0   SLOT    "ROMLO"     ORGA $18    OVERWRITE   "z80_rst_18"
+BANK    0   SLOT    "ROMLO"     ORGA $20    OVERWRITE   "piles.RSTPoolAddr"
+BANK    0   SLOT    "ROMLO"     ORGA $28    OVERWRITE   "piles.RSTCardAddr"
+BANK    0   SLOT    "ROMLO"     ORGA $38    OVERWRITE   "piles.RSTPileCount"
+BANK    0   SLOT    "ROMLO"     ORGA $40    OVERWRITE   "irq_vblank"
 
 [ramsections]
 ; this, being a GameBoy, requires variables in RAM
 ;
-BANK    0   SLOT    "WRAMLO"            "Queue"
-BANK    0   SLOT    "WRAMLO"            "Joypad"
-BANK    0   SLOT    "WRAMLO"            "tilemap.Buffers"
-BANK    0   SLOT    "WRAMLO"            "sprites.Attrs"
-BANK    0   SLOT    "WRAMLO"            "cursor.Cursor"
+BANK    0   SLOT    "WRAMLO"    "Queue"
+BANK    0   SLOT    "WRAMLO"    "Joypad"
+BANK    0   SLOT    "WRAMLO"    "tilemap.Buffers"
+BANK    0   SLOT    "WRAMLO"    "sprites.Attrs"
+BANK    0   SLOT    "WRAMLO"    "cursor.Cursor"
 
-BANK    0   SLOT    "WRAMLO"            "piles.Storage"
-BANK    0   SLOT    "WRAMHI"            "piles.PileType"
-BANK    0   SLOT    "WRAMHI"            "piles.PileCount"
-BANK    0   SLOT    "WRAMHI"            "piles.PileCapacity"
-BANK    0   SLOT    "WRAMHI"            "piles.PilePoolLo"
-BANK    0   SLOT    "WRAMHI"            "piles.PilePoolHi"
-BANK    0   SLOT    "WRAMHI"            "piles.PileRow"
-BANK    0   SLOT    "WRAMHI"            "piles.PileCol"
-BANK    0   SLOT    "WRAMHI"            "piles.PileLeft"
-BANK    0   SLOT    "WRAMHI"            "piles.PileRight"
-BANK    0   SLOT    "WRAMHI"            "piles.PileUp"
-BANK    0   SLOT    "WRAMHI"            "piles.PileDown"
+BANK    0   SLOT    "WRAMLO"    "piles.Storage"
+BANK    0   SLOT    "WRAMHI"    "piles.PileType"
+BANK    0   SLOT    "WRAMHI"    "piles.PileCount"
+BANK    0   SLOT    "WRAMHI"    "piles.PileCapacity"
+BANK    0   SLOT    "WRAMHI"    "piles.PilePoolLo"
+BANK    0   SLOT    "WRAMHI"    "piles.PilePoolHi"
+BANK    0   SLOT    "WRAMHI"    "piles.PileRow"
+BANK    0   SLOT    "WRAMHI"    "piles.PileCol"
+BANK    0   SLOT    "WRAMHI"    "piles.PileLeft"
+BANK    0   SLOT    "WRAMHI"    "piles.PileRight"
+BANK    0   SLOT    "WRAMHI"    "piles.PileUp"
+BANK    0   SLOT    "WRAMHI"    "piles.PileDown"
