--- a/link_gb.ini
+++ b/link_gb.ini
@@ -14,6 +14,7 @@ BANK    0   SLOT    "ROMLO"     ORGA $40    OVERWRITE   "irq_vblank"
 [ramsections]
 ; this, being a GameBoy, requires variables in RAM
 ;
+BANK    0   SLOT    "WRAMLO"    "Global"
 BANK    0   SLOT    "WRAMLO"    "Queue"
 BANK    0   SLOT    "WRAMLO"    "Joypad"
 BANK    0   SLOT    "WRAMLO"    "tilemap.Buffers"
