--- a/link_gb.ini
+++ b/link_gb.ini
@@ -2,13 +2,10 @@
 build/impatience.o
 
 [sections]
-BANK    0   SLOT    "ROMLO"     ORGA $00    OVERWRITE   "z80_rst_00"
-BANK    0   SLOT    "ROMLO"     ORGA $08    OVERWRITE   "z80_rst_08"
-BANK    0   SLOT    "ROMLO"     ORGA $10    OVERWRITE   "z80_rst_10"
-BANK    0   SLOT    "ROMLO"     ORGA $18    OVERWRITE   "z80_rst_18"
-BANK    0   SLOT    "ROMLO"     ORGA $20    OVERWRITE   "piles.RSTPoolAddr"
-BANK    0   SLOT    "ROMLO"     ORGA $28    OVERWRITE   "piles.RSTCardAddr"
-BANK    0   SLOT    "ROMLO"     ORGA $38    OVERWRITE   "piles.RSTPileCount"
+BANK    0   SLOT    "ROMLO"     ORGA $08    OVERWRITE   "piles.RSTPileCount"
+BANK    0   SLOT    "ROMLO"     ORGA $18    OVERWRITE   "piles.RSTLastIndex"
+BANK    0   SLOT    "ROMLO"     ORGA $28    OVERWRITE   "piles.RSTPoolAddr"
+BANK    0   SLOT    "ROMLO"     ORGA $30    OVERWRITE   "piles.RSTCardAddr"
 BANK    0   SLOT    "ROMLO"     ORGA $40    OVERWRITE   "irq_vblank"
 
 [ramsections]
