Use `pickCard` / `dropCard` for visually moving cards between piles
Cursor mode has been changed to either "user" mode (controlled by plater) or "auto" mode (controlled by the game). If a pile is picked up when in auto mode, the cursor hand is not shown.

* Used `getPosCard` in `pointToCard`, reducing code repetition; `getPosCard` calculates the correct tile offset for a card in a pile based on the pile properties (e.g. horizontal vs vertical)

* Moved `tableau.getPointPile` to an RST routine as it is used a lot

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -3,9 +3,11 @@ build/impatience.o
 
 [sections]
 BANK    0   SLOT    "ROMLO"     ORGA $08    OVERWRITE   "piles.RSTPileCount"
-BANK    0   SLOT    "ROMLO"     ORGA $18    OVERWRITE   "piles.RSTLastIndex"
-BANK    0   SLOT    "ROMLO"     ORGA $28    OVERWRITE   "piles.RSTPoolAddr"
-BANK    0   SLOT    "ROMLO"     ORGA $30    OVERWRITE   "piles.RSTCardAddr"
+BANK    0   SLOT    "ROMLO"     ORGA $10    OVERWRITE   "piles.RSTLastIndex"
+BANK    0   SLOT    "ROMLO"     ORGA $18    OVERWRITE   "piles.RSTPoolAddr"
+BANK    0   SLOT    "ROMLO"     ORGA $20    OVERWRITE   "piles.RSTCardAddr"
+BANK    0   SLOT    "ROMLO"     ORGA $30    OVERWRITE   "tableau.RSTPointPile"
+
 BANK    0   SLOT    "ROMLO"     ORGA $40    OVERWRITE   "irq_vblank"
 
 [ramsections]
