--- a/link_gb.ini
+++ b/link_gb.ini
@@ -19,7 +19,7 @@ BANK    0   SLOT    "WRAMLO"    "Joypad"
 BANK    0   SLOT    "WRAMLO"    "tilemap.Buffers"
 BANK    0   SLOT    "WRAMLO"    "sprites.Attrs"
 BANK    0   SLOT    "WRAMLO"    "cursor.Cursor"
-BANK    0   SLOT    "WRAMLO"    "piles.Storage"
+BANK    0   SLOT    "WRAMHI"    "piles.Storage"
 BANK    0   SLOT    "WRAMHI"    "piles.PileType"
 BANK    0   SLOT    "WRAMHI"    "piles.PileCount"
 BANK    0   SLOT    "WRAMHI"    "piles.PileCapacity"
@@ -32,3 +32,5 @@ BANK    0   SLOT    "WRAMHI"    "piles.PileRight"
 BANK    0   SLOT    "WRAMHI"    "piles.PileUp"
 BANK    0   SLOT    "WRAMHI"    "piles.PileDown"
 BANK    0   SLOT    "WRAMLO"    "tableau.Cursor"
+BANK    0   SLOT    "WRAMHI"    "undo.Undo"
+BANK    0   SLOT    "WRAMHI"    "undo.UndoBuff"
