Use a go-between the gameplay loop and the specific game
This adds "game.wla" to act as a standard interface for each game "module". We could use jump tables, but it's too early for that IMO

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -13,7 +13,6 @@ BANK    0   SLOT    "ROMLO"     ORGA $40    OVERWRITE   "irq_vblank"
 [ramsections]
 ; this, being a GameBoy, requires variables in RAM
 ;
-BANK    0   SLOT    "WRAMLO"    "Global"
 BANK    0   SLOT    "WRAMLO"    "Queue"
 BANK    0   SLOT    "WRAMLO"    "Joypad"
 BANK    0   SLOT    "WRAMLO"    "tilemap.Buffers"
@@ -34,3 +33,4 @@ BANK    0   SLOT    "WRAMHI"    "piles.PileDown"
 BANK    0   SLOT    "WRAMLO"    "tableau.Cursor"
 BANK    0   SLOT    "WRAMHI"    "undo.Undo"
 BANK    0   SLOT    "WRAMHI"    "undo.UndoBuff"
+BANK    0   SLOT    "WRAMLO"    "game.Game"
