Cursor movement in pause menu

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -18,6 +18,7 @@ BANK    0   SLOT    "WRAMLO"    "Joypad"
 BANK    0   SLOT    "WRAMLO"    "tilemap.Buffers"
 BANK    0   SLOT    "WRAMLO"    "sprites.Attrs"
 BANK    0   SLOT    "WRAMLO"    "cursor.Cursor"
+BANK    0   SLOT    "WRAMHI"    "menu.Menu"
 BANK    0   SLOT    "WRAMHI"    "piles.Storage"
 BANK    0   SLOT    "WRAMHI"    "piles.PileType"
 BANK    0   SLOT    "WRAMHI"    "piles.PileCount"
