Use a jump table for game intialisation
Games can be dynamically included into the binary.

This approach will do away with the need to match against the game ID in several places in the code, e.g. with the action button.

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -2,6 +2,7 @@
 build/impatience.o
 
 [sections]
+BANK    0   SLOT    "ROMLO"     ORGA $00    OVERWRITE   "RSTJumpTable"
 BANK    0   SLOT    "ROMLO"     ORGA $08    OVERWRITE   "piles.RSTPileCount"
 BANK    0   SLOT    "ROMLO"     ORGA $10    OVERWRITE   "piles.RSTLastIndex"
 BANK    0   SLOT    "ROMLO"     ORGA $18    OVERWRITE   "piles.RSTPoolAddr"
@@ -9,6 +10,8 @@ BANK    0   SLOT    "ROMLO"     ORGA $20    OVERWRITE   "piles.RSTCardAddr"
 BANK    0   SLOT    "ROMLO"     ORGA $30    OVERWRITE   "tableau.RSTPointPile"
 
 BANK    0   SLOT    "ROMLO"     ORGA $40    OVERWRITE   "irq_vblank"
+
+BANK    0   SLOT    "ROMLO"     "game.AddrInit"
 
 [ramsections]
 ; this, being a GameBoy, requires variables in RAM
