Use a jump table for tapping on cards
As before, we use a jump table to be able to dynamically include games in the binary

--- a/link_gb.ini
+++ b/link_gb.ini
@@ -12,6 +12,7 @@ BANK    0   SLOT    "ROMLO"     ORGA $30    OVERWRITE   "tableau.RSTPointPile"
 BANK    0   SLOT    "ROMLO"     ORGA $40    OVERWRITE   "irq_vblank"
 
 BANK    0   SLOT    "ROMLO"     "game.AddrInit"
+BANK    0   SLOT    "ROMLO"     "game.AddrAction"
 
 [ramsections]
 ; this, being a GameBoy, requires variables in RAM
