--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,11 @@
         "bin": true,
         "build": true,
     },
+    "files.exclude": {
+        "build/*.o"     : true,
+        "build/*.sav"   : true,
+        "build/*.2bpp"  : true,
+    },
     // the TODO-tree extension is recommended
     // for finding the TODOs scattered in the code
     "todo-tree.filtering.excludeGlobs": [
